# eda-aid-tool

./: .gitignore  CHANGE  README.md  dc_ana_area.old.py  dc_ana_area.py  dc_area_ana.py  init_exe_access  ip_flat_cmp.py  layout_check.py  para_axis_calc.py  pt_ana_cons.dev.py  pt_ana_cons.py  pt_ana_cons_old.py  pt_ana_tb.py  pt_ana_ts.py  pt_rpt_ana.py  pt_vio_grp_sum.py  pyproject.toml
cli/: dc_ana_area  dc_area_ana  ip_flat_cmp  layout_check  para_axis_calc  pt_ana_cons  pt_ana_tb  pt_ana_ts  pt_rpt_ana  pt_vio_extract
cli/win32/: dc_ana_area.cpp  dc_area_ana.cpp  layout_check.cpp  pt_ana_cons.cpp  pt_ana_tb.cpp  pt_ana_ts.cpp  pt_rpt_ana.cpp  pt_vio_ana.cpp  pt_vio_extract.cpp
ip_flattening/: report_ip_boundary_timing.tcl
old/: pt_vio_ana.py  pt_vio_extract.py
old/cli/: pt_vio_ana
phaseout/: cons_sum_reorder.py
phaseout/testing/: test_ana.py  workbook1.xlsx
py_sample/sample_dc/: area1-1.cfg  area1-5.cfg  area1-7.cfg  hier_area2_2.rpt  tag_test.cfg
py_sample/sample_phy/: bound_wire_keepout.json  clk_2w2s.blk.rpt  clk_2w2s.top.rpt  macro_wire_keepout.json  sample.lef
py_sample/sample_pt/: def.cfg  slack_policy1.cfg  top5.def
sample/: area.list  hier_area.rpt
sample_dc/: area.cfg  area1-1.cfg  area1-6.cfg  area2-1.cfg  area2.cfg  area3.cfg  area4.cfg  command.list  hier_area.rpt  hier_area2.rpt  hier_area2_2.rpt  hier_area2_3.rpt
sample_phy/: bound_wire_keepout.json  clk_2w2s.json  macro_cell_keepout.json  macro_wire_keepout.json  sample.def  sample.lef
sample_phy/check_report/: clock_2w2s_check.rpt  macro_wire_keepout.rpt
sample_pt/: core_top.def  design.def  design.ses  mbist.cfg  top1.def  top7.def  violation.rpt  violation2.rpt
sample_pt/ip_comp/: README.md  ipconfig.py  multi_scenarios_report.xlsx  single_scenario_report.xlsx
sample_pt/pt_cons/: cmd.cfg  command.jsonschema  command.list  sum_cfg.py  vio_cmp.sum  violation.rpt  violation1-1.rpt  violation1.rpt  violation2.rpt
sample_pt/pt_time/: .gitignore  .pt_ana_ts.setup  .pt_rpt_ana.time2.setup  clock_check0.dump  cmd.cfg  pt_times.cfg  time_feed_full.rpt  time_feed_full2.rpt  time_r2r_full.rpt  time_r2r_full_clock.rpt  (+5 more)
tcl/: design_explore.tcl  get_ckgen_unsync_bound.tcl  layout_check.tcl  pt_user_scr.tcl  report_ip_boundary_timing.tcl
utils/: __init__.py  common.py  def_parser.py  general.py  lef_parser.py  primetime.py  primetime_cons.py  primetime_ts.py
(+42 files in other folders)
