[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inc1-cad-tool"
dynamic = ["version"]
description = "CAD tool for Inc."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Edward Yeh" }
]

license = { text = "GPL-2.0" }

#classifiers = [
#    "Development Status :: 3 - Alpha",
#    "Intended Audience :: Developers",
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python :: 3.10",
#    "Programming Language :: Python :: 3.11",
#    "Programming Language :: Python :: 3.12",
#    "Topic :: Multimedia :: Graphics",
#]

dependencies = [
]

[project.scripts]
pinmux_analyser = "inc1_cad_tool.pinmux_analyser:main"

[tool.setuptools.dynamic]
version = {attr = "inc1_cad_tool.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
#"inc1_cad_tool" = ["example/*.json"]

[project.urls]
"Homepage" = "https://github.com/edwardyeh/inc1-cad-tool.git"

