[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-aid-tool"
dynamic = ["version"]
description = "Tools to improve IC design flow or analysis EDA tool reports."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Edward Yeh" }
]

license = { text = "GPL-2.0" }

#classifiers = [
#    "Development Status :: 3 - Alpha",
#    "Intended Audience :: Developers",
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python :: 3.10",
#    "Programming Language :: Python :: 3.11",
#    "Programming Language :: Python :: 3.12",
#    "Topic :: Multimedia :: Graphics",
#]

dependencies = [
]

[project.scripts]
layout_check   = "eda_aid_tool.layout_check:main"
para_axis_calc = "eda_aid_tool.para_axis_calc:main"
pt_ana_cons    = "eda_aid_tool.pt_ana_cons:main"
pt_ana_tb      = "eda_aid_tool.pt_ana_tb:main"
pt_ana_ts      = "eda_aid_tool.pt_ana_ts:main"
pt_rpt_ana     = "eda_aid_tool.pt_rpt_ana:main"

[tool.setuptools.dynamic]
version = {attr = "eda_aid_tool.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
#"inc1_cad_tool" = ["example/*.json"]

[project.urls]
"Homepage" = "https://github.com/edwardyeh/eda-aid-tool.git"

